# nres

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  PARAM_LOADING_EXAMPLE.md  README.md  pyproject.toml  setup.py  test_pick_one.py  test_rebin.py
.documents/: INSTALLATION.md
.github/workflows/: ci.yml  workflow.yml
docs/: requirements.txt
docs/source/: conf.py  cross_section.rst  cross_section_usage.rst  data.rst  data_usage.rst  index.rst  models.rst  models_physics.rst  models_usage.rst  modules.rst  nres.rst  response.rst  utils.rst
docs/source/_templates/: layout.html
include/: integrate_xs.h
notebooks/: nres_demo.ipynb
src/: bindings.cpp  cross_section.py  integrate_xs.cpp  models.py  utils.py
src/nres/: __init__.py  cross_section.py  data.py  grouped_fit.py  models.py  response.py  utils.py
src/nres/data/: nres_materials.json
tests/: test_cross_section.py  test_data.py  test_endf.py  test_fit_default.py  test_grouped_fit.py  test_grouped_rebin.py  test_models.py  test_parameter_validation.py  test_rebin.py  test_response.py  test_rietveld_vary_false.py  test_save_load.py  test_stages.py
